ontopia/src/test-data/ltm/error/include-collide.ltm

#TOPICMAPID topicmap
#INCLUDE "include-collide.sub"

[person = "Person"]
[lmg : person = "Lars Marius Garshol"]